Página de matérias - front end

--- a/V1/codigo/styles/layout.css
+++ b/V1/codigo/styles/layout.css
@@ -91,8 +91,9 @@ section {
    ========================= */
 
 .about {
-  background-color: var(--color-light);
+  background-color: #eef1f4;
 }
+
 
 .about-card {
   display: flex;
