--- a/V1/codigo/styles/base.css
+++ b/V1/codigo/styles/base.css
@@ -129,3 +129,10 @@ img {
   margin: 0 auto;
   padding: 0 1.2rem;
 }
+
+.card-link {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+}
+
